Fix Jess project popup title too big

--- a/src/app/views/popups/comic-project-showcase-popup/comic-project-showcase-popup.component.scss
+++ b/src/app/views/popups/comic-project-showcase-popup/comic-project-showcase-popup.component.scss
@@ -9,7 +9,7 @@
     padding: 1em;
 
     .title {
-        font-size: xx-large;
+        font-size: x-large;
         margin: 0.5em;
     }
 
